<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="4dp"
    android:foreground="?attr/selectableItemBackground"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"

        >

        <ImageView
            android:id="@+id/imageview_itemmovie_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ratingbar_itemmovie_rating"
            tools:srcCompat="@drawable/ic_loading" />

        <RatingBar
            android:id="@+id/ratingbar_itemmovie_rating"
            style="@style/Widget.App16_MovieAppCapstone.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_itemmovie_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_itemmovie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ratingbar_itemmovie_rating"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title_label"
            style="?attr/textAppearanceBodyLarge"
            />

        <TextView
            android:id="@+id/textView_itemmovie_description"
            style="?attr/textAppearanceBodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_itemmovie_title" />

        <TextView
            android:id="@+id/textView_itemmovie_language"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/original_language"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageview_itemmovie_image"
            app:layout_constraintTop_toTopOf="@+id/imageview_itemmovie_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>